// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroupField component render should render a list of checkboxes 1`] = `
<FieldSet>
  <Input
    checked={false}
    disabled={false}
    key="1"
    name="option.0"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <Input
    checked={false}
    disabled={false}
    key="2"
    name="option.1"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
  <Input
    checked={false}
    disabled={false}
    key="3"
    name="option.2"
    onChange={[Function]}
    type="checkbox"
    value={3}
  />
  <Input
    checked={false}
    disabled={false}
    key="4"
    name="option.3"
    onChange={[Function]}
    type="checkbox"
    value={4}
  />
</FieldSet>
`;

exports[`CheckboxGroupField component render should render an error if field is touched and there is an error defined for the current field 1`] = `
<FieldSet>
  <Input
    checked={false}
    disabled={false}
    key="1"
    name="option.0"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <Input
    checked={false}
    disabled={false}
    key="2"
    name="option.1"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
  <Input
    checked={false}
    disabled={false}
    key="3"
    name="option.2"
    onChange={[Function]}
    type="checkbox"
    value={3}
  />
  <Input
    checked={false}
    disabled={false}
    key="4"
    name="option.3"
    onChange={[Function]}
    type="checkbox"
    value={4}
  />
  <Error>
    some error
  </Error>
</FieldSet>
`;

exports[`CheckboxGroupField component render should render check checkboxes if their values are already in the field values list 1`] = `
<FieldSet>
  <Input
    checked={true}
    disabled={false}
    key="1"
    name="option.0"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <Input
    checked={true}
    disabled={false}
    key="2"
    name="option.1"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
  <Input
    checked={false}
    disabled={false}
    key="3"
    name="option.2"
    onChange={[Function]}
    type="checkbox"
    value={3}
  />
  <Input
    checked={false}
    disabled={false}
    key="4"
    name="option.3"
    onChange={[Function]}
    type="checkbox"
    value={4}
  />
</FieldSet>
`;

exports[`CheckboxGroupField component render should render some disabled checkboxes if their values are not in the field values list and the maximum allowed checked checkboxes number is already met 1`] = `
<FieldSet>
  <Input
    checked={true}
    disabled={false}
    key="1"
    name="option.0"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <Input
    checked={true}
    disabled={false}
    key="2"
    name="option.1"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
  <Input
    checked={true}
    disabled={false}
    key="3"
    name="option.2"
    onChange={[Function]}
    type="checkbox"
    value={3}
  />
  <Input
    checked={false}
    disabled={true}
    key="4"
    name="option.3"
    onChange={[Function]}
    type="checkbox"
    value={4}
  />
</FieldSet>
`;
